<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/dialog_type_one"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/DialogTitleTextView"
                android:id="@+id/dialog_type_one_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
              />

            <Button
                android:id="@+id/dialog_type_one_ok_button"
                style="@style/ButtonStyle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/ok"
                />


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_type_two"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/popup_type_two_title"
                android:id="@+id/dialog_type_two_title_textview"
                style="@style/DialogTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dialog_type_two_ok_button"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/popup_type_two_pass"
                    />
                <Button
                    android:id="@+id/dialog_type_two_cancel_button"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/popup_type_two_install"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_type_three"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/dialog_type_three_text_view"
                style="@style/DialogTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:layout_width="match_parent"
                style="@style/WriteEditText"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/dialog_type_three_edit_text"/>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                android:text="@string/cancel"
                android:id="@+id/dialog_type_three_cancel_button"
                style="@style/CancelButtonStyle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp" />
                <Button
                    android:id="@+id/dialog_type_three_send_button"
                    style="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_type_four"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
            <TextView
                android:text="BAŞLIK"
                android:id="@+id/dialog_type_four_title_text_view"
                style="@style/DialogTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dialog_type_four_detail_text_view"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="detail"/>

            <TextView
                android:id="@+id/dialog_type_four_location_text_view"
                android:text="Event Location"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dialog_type_four_category_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"/>



            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:text="@string/cancel"
                    android:id="@+id/dialog_type_four_cancel_button"
                    style="@style/CancelButtonStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp" />
                <Button
                    android:id="@+id/dialog_type_four_send_button"
                    style="@style/ButtonStyle"
                    android:text="OK"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
           </LinearLayout>
        </ScrollView>

        </LinearLayout>



        <LinearLayout
            android:visibility="gone"
            android:id="@+id/dialog_type_five"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/dialog_type_five_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:text="@string/cancel"
                    android:id="@+id/dialog_type_five_cancel_button"
                    style="@style/CancelButtonStyle"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp" />
                <Button
                    android:id="@+id/dialog_type_five_send_button"
                    style="@style/ButtonStyle"
                    android:text="OK"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
